<resources>
    <string name="app_name">我們的app還沒有名字</string>
    <string name="hint">hint</string>
    <string name="title">請選擇時間</string>
    <string name="按地區">string</string>
    <string name="anfenlei">按分類</string>
    <string name="tuijian">推薦</string>
    <string name="andiqu">按地區</string>
    <string name="zahoanjianTitle">找案件</string>
    <string name="remenanjianTitle">熱門案件</string>
    <string name="anjiansosuo">案件搜索</string>
    <string name="remenfaguiTitle">熱門法規</string>
    <string name="faguisosuo">法規搜索</string>
    <string name="jiensuozihuiTitle">檢索字彙</string>
    <string name="caipanzihaoTitle">裁判字號</string>
    <string name="diyuanfanwei">地院範圍</string>
    <string name="caipanleibie">裁判類別</string>
    <string name="caipanqibie">裁判期別</string>
    <string name="caipananyou">裁判案由</string>
    <string name="caipanzhuwen">裁判主文</string>
    <string name="chengshenfaguan">承審法官</string>
    <string name="jiensuozihui">hint</string>
    <string name="caipanzihao">hint</string>
    <string name="zimingguo">自民國</string>
    <string name="caipananyouTitle">裁判案由</string>
    <string name="main_menu_judgement">查案件</string>
    <string name="main_menu_firm">查律所</string>
    <string name="main_menu_law">查法條</string>
    <string name="main_menu_lawyer">問律師</string>
    <string name="main_menu_counseling">案件問答</string>
    <string name="main_menu_help">法律援助</string>
    <string name="main_menu_unscramble">傳票解讀</string>
    <string name="main_menu_schedule">進度查詢</string>
    <string name="caipananyouInput">hint</string>
    <string name="caipanzhuwenInput">hint</string>
    <string name="chengshenfzguanInput">hint</string>
    <string name="nienyuere">nienyuere</string>
    <string name="mingguo">hint</string>
    <string name="yue">hint</string>
    <string name="re">hint</string>
    <string name="zhinian">hint</string>
    <string name="zhiyue">hint</string>
    <string name="zhire">hint</string>
    <string name="text_faluzisun">法律諮詢</string>
    <string name="subtitle">專業律所律師解答/當事人隱私保護/律師資格人工審核</string>
    <string name="shishiliyou">事實理由</string>
    <string name="title_caipanzhuwen">裁判主文</string>
    <string name="title_caipananyou">返還租賃房屋</string>
    <string name="title_caipanriqi">民國 107 年 01 月31 日</string>
    <string name="title_caipanzihao">103,板簡,1324</string>
    <string name="content_caipanzhuwen">被告應將門牌號碼新北市○○區○○路○段○○○號四樓之二之房屋遷讓返還原告。被告應給付原告新台幣壹萬壹仟伍佰元，及自民國一百零三年七月二日起至遷讓前項房屋之日止，按月給付原告新台幣陸仟伍佰元。 訴訟費用由被告負擔。 本判決得假執行。 但被告如以新臺幣柒拾捌萬元為原告預供擔保，得免為假執行。</string>
    <string name="title_shiwusuo">大成律師事務所</string>
    <string name="lvshishiwusuo">大成律師事務所</string>
    <string name="address">台北市大安區敦化南路二段 77 號</string>
    <string name="phone">02 2702 0208</string>
    <string name="content_shiwusuojianjie">全法域的法律服務｜大成律師能提供包括大陸法系、英美國普通法、伊斯蘭教法、台灣、大陸法等各國和地區不同法域的法律服務。客戶業務到哪裡，大成的服務就到哪裡。 全天候的法律服務｜大成律師提供的服務沒有時差區別，沒有時差限制。只要客戶有法律服務需求，無論在哪個時區，都有優秀的大成律師。 全產業的法律服務｜大成律師提供的法律服務領域涵蓋 24 個行業、超過 40 個產業領域，包括投融資、能源礦業、國際併購、反壟斷、反傾銷、資訊通訊、交通、娛樂媒體、企業上市等等所有領域。</string>
    <string name="toTaipeiCity">台北市</string>
    <string name="toKeelongCity">基隆市</string>
    <string name="toNewtaipeiCity">新北市</string>
    <string name="toYilanCity">宜蘭市</string>
    <string name="toTaoyuenCity">桃園市</string>
    <string name="toXinzhuCounty">新竹縣</string>
    <string name="toXinzhuCity">新竹市</string>
    <string name="toTaichungCity">台中市</string>
    <string name="toMiaoliCounty">苗栗縣</string>
    <string name="toTsianghuaCounty">彰化縣</string>
    <string name="toYunlinCounty">雲林縣</string>
    <string name="toNantouCounty">南投縣</string>
    <string name="toPenghuCounty">澎湖縣</string>
    <string name="toChayiCity">嘉義市</string>
    <string name="toChayiCounty">嘉義縣</string>
    <string name="toTainanCity">台南市</string>
    <string name="toPingtongCity">屏東市</string>
    <string name="toKaohsiungCity">高雄市</string>
    <string name="toTaitongCounty">台東縣</string>
    <string name="toHualienCounty">花蓮縣</string>
    <string name="kuaisuchashiwusuo">hint</string>
    <string name="toAnfenlaixhashiwusuo">按分類</string>
    <string name="toTuijianshiwusuo">推薦</string>
    <string name="toAndiquchashiwusuo">按地區</string>
    <string name="faguimingcheng">勞動基準法</string>
    <string name="xiuzhengrqi">民國 107 年 01 月31 日</string>
    <string name="faguilaibie">勞動部 ＞ 勞動條件及就業平等目</string>
    <string name="fatiao_title">第一章 總則</string>
    <string name="fatiaozhengwen">為規定勞動條件最低標準，保障勞工權益，加強勞雇關係，促進社會與經濟發展，特制定本法；本法未規定者，適用其他法律之規定。 雇主與勞工所訂勞動條件，不得低於本法所定之最低標準。</string>
    <string name="nextpage">下一條</string>
    <string name="toZhaolusuo_andiqu">按地區</string>
    <string name="anduqu_title">按地區</string>

    <string name="toZhaolvsuo_anfenlei">按分類</string>
    <string name="toZhaolvsuo_andiqu">按地區</string>
    <string name="toZhaolvsuo_tuijian">推薦</string>
    <string name="title_amfenlei">按分類</string>
    <string name="topic">黃利菁|什麼是假處分</string>
    <string name="contentpreview">假處分是針對金錢請求以外的請求，法院裁定強制債務人對請求的標的為一定行為</string>
    <string name="image">image</string>
    <string name="tofaguijiensuo">法規檢索</string>
    <string name="toremenfatiao">熱門法條</string>
    <string name="submit">提交</string>
    <string name="cancle">取消</string>
    <string name="select_title">請選擇時間</string>
    <string name="commit">確定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">時</string>
    <string name="minute">分</string>

    <!-- Strings related to login -->
    <string name="back">返回</string>
    <string name="login_register">註冊</string>
    <string name="login_account">賬號</string>
    <string name="login_phone">手機</string>
    <string name="login_with_phone">以手機登入</string>
    <string name="login_with_account">以賬號登入</string>
    <string name="login_password">密碼</string>
    <string name="login_login">登錄</string>
    <string name="login_cancel">取消登錄</string>
    <string name="login_forget">忘記密碼？</string>
    <string name="login_agree">同意本系統用戶協議</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="lawyer_consult_title">律師咨詢</string>
    <string name="title_activity_quick_consult">QuickConsultActivity</string>
    <string name="title_activity_case_consult">CaseConsultActivity</string>

    <!-- Strings related to case_consult -->
    <string name="consult_case_text">請詳細告知案件的詳情，我們會保證您與當事人隱私的安全</string>
    <string name="case_consult_next">下一步</string>
    <string name="case_consult_title">案件諮詢</string>
    <string name="consult_case_hint">#上傳的起訴書或證據僅供本系統使用</string>

    <!-- Strings related to case_consult_result -->
    <string name="consult_case_result_title">結果</string>
    <string name="consult_case_result_similar">類似案件</string>
    <string name="consult_case_result_reason">判決理由</string>
    <string name="consult_case_result_refer">參考法條</string>
    <string name="consult_case_result_compensate">量刑賠償</string>
    <string name="consult_case_result_percent">推估結果：</string>

    <!-- Strings related to quick_consult -->
    <string name="consult_quick_upload">點擊上傳起訴書或其他相關證據</string>
    <string name="consult_quick_text">您有任何法律相關的疑問，都可以在此提問。專業的律師將免費爲您解答</string>
    <string name="consult_quick_hint">#上傳的起訴書或證據僅供本系統使用</string>
    <string name="consult_quick_next">送出</string>

    <!-- Strings related to pop up pick picture -->
    <string name="popuppic_take">拍照</string>
    <string name="popuppic_choose">从相册选择</string>
    <string name="popuppic_cancel">取消</string>

    <!-- Strings related to lawyer_consult -->
    <string name="consult_lawyer_title">快速匹配律師</string>

    <!-- Strings related to lawyer_detail -->
    <string name="consult_lawyer_detail_title">律師詳情</string>
    <string name="consult_lawyer_detail_y">年</string>
    <string name="consult_lawyer_detail_year">從業年限</string>
    <string name="consult_lawyer_detail_t">次</string>
    <string name="consult_lawyer_detail_times">問答次數</string>
    <string name="consult_lawyer_detail_score">分</string>
    <string name="consult_lawyer_detail_scholar">學歷</string>
    <string name="consult_lawyer_detail_occupation">現職</string>
    <string name="consult_lawyer_detail_special">專業領域</string>
    <string name="consult_lawyer_detail_personal">個人簡介</string>
    <string name="consult_lawyer_detail_follow">關注</string>
    <string name="consult_lawyer_detail_detail">律師詳情</string>
    <string name="consult_lawyer_detail_cases">曾經處理的公開案件</string>
    <string name="consult_lawyer_detail_allcases">點擊查看所有該律師的公開案件 ></string>


    <string name="consult_lawyer_detail_cases_text">請向律師詳細描述您的案件經過，以及上傳相關證據圖片后，耐心等待律師為您解答</string>

    <string name="consult_lawyer_result_lawyer_answer">回復了該案件</string>
    <string name="consult_lawyer_result_follow">+關注</string>
    <string name="consult_lawyer_result_comment">用戶評價</string>

    <!-- Strings related to register -->
    <string name="register_title">註冊</string>
    <string name="register_back">返回</string>
    <string name="register_account">賬號</string>
    <string name="register_phone">手機</string>
    <string name="register_password">密碼</string>
    <string name="register_register">註冊</string>
    <string name="register_agree">同意本系統用戶協議</string>
    <string name="register_cancel">取消註冊</string>
    <string name="register_with_account">以賬號註冊</string>
    <string name="register_with_phone">以手機註冊</string>
    <string name="register_contain_letter">○ 密碼中需包含英文字母</string>
    <string name="register_contain_eight">○ 密碼至少需要8位</string>

    <!-- Strings related to judgement consult -->
    <string name="judgement_consult_title">案件內容</string>
    <string name="judgement_consult_name">裁判字號</string>
    <string name="judgement_consult_date">裁判日期</string>
    <string name="judgement_consult_reason">裁判案由</string>
    <string name="judgement_consult_main">裁判主文</string>
    <string name="judgement_consult_fact">事實理由</string>

    <!-- Strings related to quick consult result-->

    <!--Strings related to quick consult result-->
    <!--<string name="quick_consult_result_reply">律師回覆</string>-->
    <string name="quick_consult_result_comment">用戶評論</string>
    <string name="quick_consult_result_title">快速諮詢詳情</string>
    <string name="quick_consult_result_only">只看作者和律師</string>
    <string name="quick_consult_result_viewtime">次瀏覽</string>
    <string name="quick_consult_result_upright">按時間順序</string>
    <string name="quick_consult_result_downright">按時間倒序</string>
    <string name="quick_consult_result_delete">刪除</string>
    <string name="quick_consult_result_reply">回復</string>

    <!-- Strings related to quick consult result reply-->
    <string name="quick_consult_result_reply_submit">提交</string>

    <!-- Strings related to quick consult reply list-->
    <string name="quick_consult_reply_list_upright">順序</string>
    <string name="quick_consult_reply_list_downright">倒序</string>

    <!-- Strings related to main search result-->
    <string name="main_search_result_counseling">正在查詢，請稍後...</string>
    <string name="main_search_result_nothing">哎呀，好像沒東西鴨</string>
    <string name="main_search_result_error">好像出問題了誒...</string>

    <!-- select picture -->
    <string name="app_pengyouquan">朋友圈</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="hot_news">熱門新聞</string>
    <string name="famous_comment">名家評論</string>

</resources>

