<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zhaolusuo_andiqu">

    <Button
        android:id="@+id/button41"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:background="#FFFFFF"
        android:text="@string/toTaipeiCity"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button42"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="144dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toKeelongCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/button41"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button43"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:background="#FFFFFF"
        android:text="@string/toNewtaipeiCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button41"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button44"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toYilanCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button41" />

    <Button
        android:id="@+id/button45"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toTaoyuenCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/button41"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button42" />

    <Button
        android:id="@+id/button46"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toXinzhuCounty"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button44"
        app:layout_constraintTop_toBottomOf="@+id/button43" />

    <Button
        android:id="@+id/button47"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="227dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:textColor="@android:color/darker_gray"
        android:text="@string/toXinzhuCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button45" />

    <Button
        android:id="@+id/button48"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="122dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="70dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toTaichungCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button44" />

    <Button
        android:id="@+id/button49"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="43dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toMiaoliCounty"
        app:layout_constraintEnd_toStartOf="@+id/button48"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button47" />

    <Button
        android:id="@+id/button50"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="70dp"
        android:background="@color/cardview_light_background"
        android:textColor="@android:color/darker_gray"
        android:text="@string/toTsianghuaCounty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button48"
        app:layout_constraintTop_toBottomOf="@+id/button46" />

    <Button
        android:id="@+id/button51"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toYunlinCounty"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button48" />

    <Button
        android:id="@+id/button52"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="32dp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toNantouCounty"
        app:layout_constraintEnd_toStartOf="@+id/button51"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button49" />

    <Button
        android:id="@+id/button53"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toPenghuCounty"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button48"
        app:layout_constraintTop_toBottomOf="@+id/button50" />

    <Button
        android:id="@+id/button54"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="44dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toChayiCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button51" />

    <Button
        android:id="@+id/button55"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="44dp"
        android:background="@color/cardview_light_background"
        android:textColor="@android:color/darker_gray"
        android:text="@string/toChayiCounty"
        app:layout_constraintEnd_toStartOf="@+id/button54"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button52" />

    <Button
        android:id="@+id/button57"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="44dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toTainanCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/button54"
        app:layout_constraintTop_toBottomOf="@+id/button53" />

    <Button
        android:id="@+id/button58"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toPingtongCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button54" />

    <Button
        android:id="@+id/button59"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toKaohsiungCity"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/button58"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button55" />

    <Button
        android:id="@+id/button60"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="36dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toTaitongCounty"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button58" />

    <Button
        android:id="@+id/button61"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="36dp"
        android:background="@color/cardview_light_background"
        android:text="@string/toHualienCounty"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/button60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button59" />

    <Button
        android:id="@+id/button62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/wenan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button63"
        android:layout_width="49dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/shoye"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button62"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button64"
        android:layout_width="37dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="29dp"
        android:background="@drawable/wode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button62" />

    <Button
        android:id="@+id/button65"
        android:layout_width="31dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shangyiye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button66"
        android:layout_width="24dp"
        android:layout_height="26dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/tongzhi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button65"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="77dp"
        android:layout_height="25dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/soxun"
        app:layout_constraintEnd_toStartOf="@+id/button66"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button65"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kuaisuchashiwusuo" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="137dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="51dp"
        android:background="@android:color/transparent"
        android:text="@string/toAnfenlaixhashiwusuo"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:background="@android:color/transparent"
        android:text="@string/toTuijianshiwusuo"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/button67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/anduqu_title"
        android:textColor="#5AC7B7"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button67"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>