<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/selector_item_color"
        android:visibility="visible">

        <Button
            android:id="@+id/case_consult_back"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/case_consult_title"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/case_consult_next"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toEndOf="@+id/case_consult_back"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/case_consult_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/touming"
            android:text="@string/case_consult_next"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/case_consult_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/consult_case_text"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:scrollHorizontally="false"
        android:singleLine="false" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/consult_case_hint"
        android:textColor="@color/selector_item_color"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5" />

</LinearLayout>
